--- a/vignettes/practicalPSI.Rmd
+++ b/vignettes/practicalPSI.Rmd
@@ -96,7 +96,33 @@ aic_hybrid =infer(aic_model,  method = "hybrid", nonselection = "ignored")
 
 
 ```{r}
-lasso_sel_confident  = infer(lassomin_model , method="selectiveinf",nonselection="confident_nulls")
+model= step_ic (x=x,y=y,std = F, penalty = "AIC", direction = "forward")
+View(model[["beta"]])
+
+x <-model[["x"]]
+x_mat= model.matrix(y ~., model.frame(~ ., cbind(x,y=model[["y"]]), na.action=na.pass))[,-1]
+y <- model[["y"]]
+x= x_mat
+variable_names <- colnames(x)
+ # Run forward stepwise selection and compute p-values and confidence intervals
+fs_result <- fs(x, y, intercept =T, normalize= F)  # Compute the forward selection object
+  #print(fs_result)
+# Get AIC-based selection with confidence intervals
+  out_aic <- fsInf(fs_result, type = "aic", mult=2, verbose = FALSE,  alpha = 0.05)
+  #print(out_aic
+  # Extract selected variable names and calculate coefficients
+  selected_vars <- variable_names[out_aic$vars]
+
+  # Calculate the coefficients
+  coefficients <- as.vector(out_aic$vmat %*% y)
+  names(coefficients) <- selected_vars
+
+    
+fit_aic__fwd_hybrid <- infer(aic_model_fw , method = "hybrid")
+tidy(fit_aic__fwd_hybrid )
+
+fit_aic_SI_wfd <- infer(aic_model_fw, method = "selectiveinf", std=T)
+tidy(fit_aic_SI_wfd )
 ```
 
 
