Updating function to model matrix can be inputted as well as dataframe

--- a/README.Rmd
+++ b/README.Rmd
@@ -51,13 +51,15 @@ Hmm, $R^2$ is high but nothing is "significant". What is going on? The model is 
 X <- model.matrix(fit_full)[,-1]
 head(X)
 
-fit_aic <- step_ic(y = mtcars$mpg, x = X, std = TRUE ) # does not work if x is matrix
+fit_aic <- step_ic(y = mtcars$mpg, x = X, std = TRUE,direction = "forward" ) # does not work if x is matrix
 
-x <- mtcars[, !names(mtcars) %in% "mpg"]
-fit_aic_std <- step_ic(y = mtcars$mpg, x = x, std = TRUE) # std works if x is dataframe 
+#x <- mtcars[, !names(mtcars) %in% "mpg"]
+#fit_aic_std <- step_ic(y = mtcars$mpg, x = x, std = TRUE) # std works if x is dataframe 
 
-fit_aic_std 
+fit_aic
 ```
+
+`step_ic()` function creates a `selector_ic` class which we can pass to `tidy()` function to get results in tibble:
 
 
 ```{r AIC no std}
@@ -65,14 +67,14 @@ fit_aic <- step_ic(y = mtcars$mpg, x = X)
 tidy(fit_aic)
 ```
 
-AIC selects `wt`, `qsec`, and `am`. But where are the p-values?! This is where post-selection inference comes in; p-values that do not adjust for the selective process are not valid (they will be too small!). We refer to this as a "hybrid" method where selection is performed and ordinary least squares theory is used for inference. 
+AIC selects `wt`, `cyl`, and `hp`. But where are the p-values?! This is where post-selection inference comes in; p-values that do not adjust for the selective process are not valid (they will be too small!). We refer to this as a "hybrid" method where selection is performed and ordinary least squares theory is used for inference. 
 
 ```{r AIC hybrid}
 fit_aic_hybrid <- infer(fit_aic, method = "hybrid")
 tidy(fit_aic_hybrid)
 ```
 
-What if we wanted to adjust for the selective process? Here using `selectiveInference`. 
+What if we wanted to adjust for the selective process? Here we can just change `method` option in `infer()` function to using `selectiveinf` to use  `selectiveInference` method. 
 
 ```{r AIC selectiveinference}
 fit_aic_SI <- infer(fit_aic, method = "selectiveinf")
@@ -84,9 +86,13 @@ tidy(fit_aic_SI)
 
 What about bootstrapping? 
 
+When bootstrapping the data and performing model selection, we have to decide how to get distribution of variables when sometimes that variable could be selected while other times, it doens't. 
+
 ##### Ignored null
 
-[explain what this is]
+In this case, we first perform the variable selection using whole data set and prefer model selection method using either `step_ic()` or `pen_cv()` functions. Then for inference, we only focus on variables that are selected on whole data when doing bootstrap. 
+
+To obtain the bootstrap distribution of each $\hat{\beta}_j$ selected by model selection procedure,we proceed as follows:  For each bootstrap iteration, we resample the data with replacement, apply the same model selection method to the re sampled data, and save the coefficients for variables that were selected in first step. If a variable in the prime model in step 1  is not selected in the current bootstrap model, we set its coefficient to zero. This process provides a bootstrap distribution for each variable that was selected in full dataset, allowing us to calculate confidence intervals based on the quantiles of these distributions. 
 
 ```{r AIC bootstrap}
 set.seed(1)
@@ -97,7 +103,7 @@ tidy(fit_aic_boot)
 
 ##### Confident null non-selections
 
-[Explain what this is]
+In this setting, we are interested in making inferences for all variables, including those not selected by the prime model using full data(i.g., using `step_ic()` or `pen_cv()` on full dataset). Compared to the previous approach, the primary difference here is that, for each bootstrap iteration, after applying the model same selection method to boostrap sample, we retain the coefficients for all variables, regardless of whether they were included in the prime model or not. For any variable not selected in a given bootstrap sample, its coefficient is set to zero. This process produces a bootstrap distribution for all $p$ variables, allowing us to calculate CIs by using the quantiles of these distributions. 
 
 ```{r AIC bootstrap 2}
 set.seed(1)
@@ -123,14 +129,23 @@ In either case, we find the selections no longer significant after adjusting for
 ```{r}
 fit_bic <- step_ic(y = mtcars$mpg, x=X, penalty = "BIC")
 fit_bic 
-tidy(infer(fit_bic)) # should be same as fit_aic_hybrid, same model (I think it shouls be same as fit_bic and it is??)
 ```
+As, expected with BIC we get fewer varaibles, specicifcially BIC does not select `hp`. And interestingly with hybrid method and ignoring non-selections, we find that both `cyl` and `hp` are signifiacnt as shown below. 
+
+```{r}
+tidy(infer(fit_bic)) 
+```
+
 
 Selective inference: 
 
+
+We see that `Selective inference` gives wider confidence interval and once selection procedure is taken into account, both selected varibales are no longer significant. 
+
+
 ```{r}
 fit_bic_SI <- infer(fit_bic, method = "selectiveinf")
-fit_bic_SI # Much smaller intervals
+fit_bic_SI # Much bigger intervals
 
 tidy(fit_bic_SI)
 ```
@@ -144,7 +159,7 @@ fit_bic_boot <- infer(fit_bic, method = "boot", B = 100)
 tidy(fit_bic_boot )
 ```
 
-
+Again, with bootstrap with see that while `cyl` is only selected 42% of the times compared to `wt` which is selected 87% of the time. However based on bootstrapped CI, neither of them are significant. 
 
 ### `pen_cv`
 
@@ -153,18 +168,16 @@ We can also try selecting the most important factors are by penalized models. We
 ```{r}
 set.seed(12)
 fit_lso <- pen_cv(y = mtcars$mpg, x = X) # does not work
-
-fit_lso <- pen_cv(y = mtcars$mpg, x = x) # it works with x as data-frame
-fit_lso # nothing selected? 
+fit_lso 
 tidy(fit_lso)
 
 ```
 
-As we can see with lasso, we get same three variables at stepwise AIC (`wt`,`qaec`,`am`), but their coefficients are different. Even without adjusting for post-selective inference, lasso  by itself does not provide any p-value or CI to do inference. We can again perfom do hybrid method where selection is performed with LASSO and ordinary least squares theory is used for inference.
+As we can see with lasso, we get only 1 overlapping variable as stepwise AIC (`wt`), but two other selected variables are different (`qsec` and `am`) . Even without adjusting for post-selective inference, lasso  by itself does not provide any p-value or CI to do inference. We can again perform do hybrid method where selection is performed with LASSO and ordinary least squares theory is used for inference.
 
 
 ```{r}
-fit_lasso_hybrid <-infer(fit_lso,method = "hybrid") # does not work
+fit_lasso_hybrid <-infer(fit_lso,method = "hybrid") 
 tidy(fit_lasso_hybrid)
 ```
 
